--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.3.2",
     "google-protobuf": "^3.21.2",
     "grpc-web": "^1.4.2",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
